updated docker compose

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ APP_SECRET=4acb39bc11806d1ea541301112a9bcb9
 
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://reza:reza1234@postgres13-service:5432/hotelroombooking?serverVersion=13&charset=utf8"
+DATABASE_URL="postgresql://reza:reza1234@postgres13-service-hrb:5432/hotelroombooking?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
