--- a/.env
+++ b/.env
@@ -18,4 +18,5 @@ DATABASE_URL="postgresql://reza:reza1234@postgres13-service-hrb:5432/hotelroombo
 # MESSENGER_TRANSPORT_DSN=doctrine://default
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=amqp://guest:guest@rabbitmq-hrb/%2f
 ###< symfony/messenger ###
