--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dependencies": {
         "@popperjs/core": "^2.9.3",
         "bootstrap": "^5.0.2",
-        "jquery": "^3.6.0"
+        "jquery": "^3.6.0",
+        "sass": "^1.37.5",
+        "sass-loader": "^10.2.0"
     }
 }
